[LB-68]: Add matchmaker endpoints to expose queue functionality
