# src/main/java/gg/launchblock/api/models/matchmaker/response/MatchRequestResult.java
@@ -1,0 +1,9 @@
+package gg.launchblock.api.models.matchmaker.response;
+
+/**
+ * Represents the status of a match submission response.
+ */
+public enum MatchRequestResult {
+    CREATED_NEW_GROUP,
+    ADDED_TO_EXISTING_GROUP
+} 
